(frontend) fixed #88; todo spacing is massive

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.prose input {
+    margin: 0 .4rem 0 0;
+}
